<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheFromActivity">

    <TextView
        android:id="@+id/textViewcreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:textColor="@color/maroon"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewcreator">

        <CheckBox
            android:id="@+id/checkBox1switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/maroon"
            android:fontFamily="@font/timesnewromanitalic"
            android:text="@string/switch1"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkBox2switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/maroon"
            android:fontFamily="@font/timesnewromanitalic"
            android:text="@string/switch2"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText1from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/maroon"
        android:textCursorDrawable="@drawable/cursor"
        android:fontFamily="@font/timesnewromanitalic"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText1from"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1transfernewwindow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:background="@drawable/transferbuttonnewwindow"
            android:fontFamily="@font/timesnewromanitalic"
            android:onClick="onclicktransfernewwindow"
            android:text="@string/transfernewwindow"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2transferdialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:background="@drawable/transferbuttondialog"
            android:fontFamily="@font/timesnewromanitalic"
            android:onClick="onclicktransferdialog"
            android:text="@string/transferdialog"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@drawable/exitbutton"
            android:fontFamily="@font/timesnewroman"
            android:onClick="onclickexit"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>